--- a/environment.yml
+++ b/environment.yml
@@ -1,25 +1,32 @@
 name: llm_env
 channels:
   - pytorch
+  - nvidia
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10
-  - pip
-  - pytorch
-  - torchvision
-  - torchaudio
+  - python=3.10.16
+  - pytorch=2.5.1
+  - pytorch-cuda=11.8
+  - cudatoolkit=11.8.0
+  - transformers
   - numpy
+  - huggingface-hub
+  - pip
   - pip:
-    - transformers
-    - autogen
-    - json5
-    - textstat
-    - sentence-transformers
-    - nltk
-    - huggingface_hub
-    - python-dotenv
-    - datasets
-    - peft
-    - faiss-cpu
-    - bitsandbytes 
+    - autogen==0.7.6
+    - bitsandbytes==0.45.3
+    - accelerate==1.4.0
+    - langchain==0.3.21
+    - openai==1.74.0
+    - anthropic==0.49.0
+    - python-dotenv==1.0.1
+    - spacy==3.8.4
+    - matplotlib==3.10.1
+    - pandas==2.2.3
+    - tqdm==4.67.1
+    - sentence-transformers==3.4.1
+    - peft==0.14.0
+    - nltk==3.9.1
+    - google-generativeai==0.8.4
+    - faiss-gpu==1.7.2
