--- a/environment.yml
+++ b/environment.yml
@@ -1,44 +1,29 @@
-name: llm
+name: project_llm
 channels:
-  - pytorch
   - nvidia
   - conda-forge
+  - pytorch
   - defaults
 dependencies:
-  - python=3.10.16
-  - pytorch=2.5.1
-  - pytorch-cuda=11.8
+  - python=3.10
+  - pytorch==2.5.1
+  - torchvision==0.20.1
+  - torchaudio==2.5.1
   - cudatoolkit=11.8.0
-  - torchaudio=2.5.1
-  - torchvision=0.20.1
-  - transformers
-  - numpy
-  - huggingface-hub
-  - pip
-  - networkx=3.4.2
-  - scipy
-  - scikit-learn
+  - numpy==1.26.4
   - pip:
-    - autogen==0.7.6
-    - bitsandbytes==0.45.3
-    - accelerate==1.4.0
-    - langchain==0.3.21
-    - openai==1.74.0
-    - anthropic==0.49.0
-    - python-dotenv==1.0.1
-    - spacy==3.8.4
-    - matplotlib==3.10.1
-    - pandas==2.2.3
-    - tqdm==4.67.1
+    - transformers==4.51.3
     - sentence-transformers==2.5.1
     - peft==0.14.0
-    - nltk==3.9.1
-    - google-generativeai==0.8.4
-    - faiss-gpu==1.7.2
-    - pytorch-lightning==2.5.1
-    - torchmetrics==1.7.1
+    - bitsandbytes==0.45.3
+    - faiss-cpu==1.10.0
     - datasets==3.3.2
-    - scikit-image==0.25.2
+    - huggingface-hub==0.30.2
+    - accelerate==1.4.0
+    - autogen==0.7.6
+    - spacy==3.8.4
+    - pandas==2.2.3
+    - tqdm==4.67.1
+    - matplotlib==3.10.1
     - seaborn==0.13.2
-    - tiktoken==0.9.0
-    - tokenizers==0.21.1 
+    - python-dotenv==1.0.1
