--- a/environment.yml
+++ b/environment.yml
@@ -1,29 +1,225 @@
-name: project_llm
+name: newest_env
 channels:
-  - nvidia
   - conda-forge
   - pytorch
   - defaults
 dependencies:
-  - python=3.10
-  - pytorch==2.5.1
-  - torchvision==0.20.1
-  - torchaudio==2.5.1
-  - cudatoolkit=11.8.0
-  - numpy==1.26.4
+  - _openmp_mutex=4.5=3_kmp_llvm
+  - aom=3.9.1=hac33072_0
+  - bzip2=1.0.8=h4bc722e_7
+  - ca-certificates=2025.1.31=hbcca054_0
+  - cpython=3.10.17=py310hd8ed1ab_0
+  - cudatoolkit=11.8.0=h4ba93d1_13
+  - dav1d=1.2.1=hd590300_0
+  - filelock=3.18.0=pyhd8ed1ab_0
+  - freetype=2.13.3=h48d6fc4_0
+  - giflib=5.2.2=hd590300_0
+  - gmp=6.3.0=hac33072_2
+  - gmpy2=2.1.5=py310he8512ff_3
+  - icu=75.1=he02047a_0
+  - jinja2=3.1.6=pyhd8ed1ab_0
+  - kaldi=5.5.1112=cpu_hb028f0a_8
+  - kernel-headers_linux-64=3.10.0=he073ed8_18
+  - lcms2=2.17=h717163a_0
+  - ld_impl_linux-64=2.43=h712a8e2_4
+  - lerc=4.0.0=h27087fc_0
+  - libabseil=20250127.1=cxx17_hbbce691_0
+  - libavif16=1.2.1=hbb36593_2
+  - libblas=3.9.0=31_hfdb39a5_mkl
+  - libcblas=3.9.0=31_h372d94f_mkl
+  - libde265=1.0.15=h00ab1b0_0
+  - libdeflate=1.23=h4ddbbb0_0
+  - libexpat=2.7.0=h5888daf_0
+  - libffi=3.4.6=h2dba641_1
+  - libgcc=14.2.0=h767d61c_2
+  - libgcc-ng=14.2.0=h69a702a_2
+  - libgfortran=14.2.0=h69a702a_2
+  - libgfortran5=14.2.0=hf1ad2bd_2
+  - libheif=1.19.7=gpl_hc18d805_100
+  - libhwloc=2.11.2=default_h0d58e46_1001
+  - libiconv=1.18=h4ce23a2_1
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - liblapack=3.9.0=31_hc41d3b0_mkl
+  - liblapacke=3.9.0=31_hbc6e62b_mkl
+  - liblzma=5.8.1=hb9d3cd8_0
+  - libnsl=2.0.1=hd590300_0
+  - libpng=1.6.47=h943b412_0
+  - libprotobuf=5.29.3=h501fc15_0
+  - libsqlite=3.49.1=hee588c1_2
+  - libstdcxx=14.2.0=h8f9b012_2
+  - libstdcxx-ng=14.2.0=h4852527_2
+  - libtiff=4.7.0=hd9ff511_3
+  - libtorch=2.5.1=cpu_mkl_hf6ddc5a_117
+  - libuuid=2.38.1=h0b41bf4_0
+  - libuv=1.50.0=hb9d3cd8_0
+  - libwebp-base=1.5.0=h851e524_0
+  - libxcb=1.17.0=h8a09558_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.13.7=h4bc477f_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - llvm-openmp=20.1.2=h024ca30_1
+  - markupsafe=3.0.2=py310h89163eb_1
+  - mkl=2024.2.2=ha957f24_16
+  - mpc=1.3.1=h24ddda3_1
+  - mpfr=4.2.1=h90cbb55_3
+  - mpmath=1.3.0=pyhd8ed1ab_1
+  - ncurses=6.5=h2d0b736_3
+  - networkx=3.4.2=pyh267e887_2
+  - numpy=1.26.4=py310hb13e2d6_0
+  - openfst=1.8.3=h84d6215_3
+  - openjpeg=2.5.3=h5fbd93e_0
+  - openssl=3.5.0=h7b32b05_0
+  - pillow=11.1.0=py310h7e6dc6c_0
+  - pip=25.0.1=pyh8b19718_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
+  - pybind11=2.13.6=pyh1ec8472_2
+  - pybind11-global=2.13.6=pyh415d2e4_2
+  - python=3.10.17=hd6af730_0_cpython
+  - python_abi=3.10=6_cp310
+  - rav1e=0.6.6=he8a937b_2
+  - readline=8.2=h8c095d6_2
+  - setuptools=75.8.2=pyhff2d567_0
+  - sleef=3.8=h1b44611_0
+  - svt-av1=3.0.2=h5888daf_0
+  - sysroot_linux-64=2.17=h0157908_18
+  - tbb=2021.13.0=hceb3a55_1
+  - tk=8.6.13=noxft_h4845f30_101
+  - typing_extensions=4.13.2=pyh29332c3_0
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - x265=3.5=h924138e_3
+  - xorg-libxau=1.0.12=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - zstd=1.5.7=hb8e6e7a_2
   - pip:
-    - transformers==4.51.3
-    - sentence-transformers==2.5.1
-    - peft==0.14.0
-    - bitsandbytes==0.45.3
-    - faiss-cpu==1.10.0
-    - datasets==3.3.2
-    - huggingface-hub==0.30.2
-    - accelerate==1.4.0
-    - autogen==0.7.6
-    - spacy==3.8.4
-    - pandas==2.2.3
-    - tqdm==4.67.1
-    - matplotlib==3.10.1
-    - seaborn==0.13.2
-    - python-dotenv==1.0.1
+      - accelerate==1.4.0
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.11.16
+      - aiosignal==1.3.2
+      - annotated-types==0.7.0
+      - anthropic==0.49.0
+      - anyio==4.9.0
+      - async-timeout==5.0.1
+      - asyncer==0.0.8
+      - attrs==25.3.0
+      - autogen==0.7.6
+      - bitsandbytes==0.45.5
+      - blis==1.2.1
+      - catalogue==2.0.10
+      - certifi==2025.1.31
+      - charset-normalizer==3.4.1
+      - click==8.1.8
+      - cloudpathlib==0.21.0
+      - confection==0.1.5
+      - contourpy==1.3.2
+      - cycler==0.12.1
+      - cymem==2.0.11
+      - dataclasses-json==0.6.7
+      - datasets==3.3.2
+      - dill==0.3.8
+      - diskcache==5.6.3
+      - distro==1.9.0
+      - docker==7.1.0
+      - exceptiongroup==1.2.2
+      - faiss-cpu==1.10.0
+      - fast-depends==2.4.12
+      - fonttools==4.57.0
+      - frozenlist==1.5.0
+      - fsspec==2024.12.0
+      - gensim==4.3.3
+      - greenlet==3.2.0
+      - h11==0.14.0
+      - httpcore==1.0.8
+      - httpx==0.28.1
+      - huggingface-hub==0.30.2
+      - idna==3.10
+      - jiter==0.9.0
+      - joblib==1.4.2
+      - jsonpatch==1.33
+      - jsonpointer==3.0.0
+      - kiwisolver==1.4.8
+      - langchain-community==0.0.13
+      - langchain-core==0.1.23
+      - langcodes==3.5.0
+      - langsmith==0.0.87
+      - language-data==1.3.0
+      - marisa-trie==1.2.1
+      - markdown-it-py==3.0.0
+      - marshmallow==3.26.1
+      - matplotlib==3.10.1
+      - mdurl==0.1.2
+      - multidict==6.4.3
+      - multiprocess==0.70.16
+      - murmurhash==1.0.12
+      - mypy-extensions==1.0.0
+      - nltk==3.9.1
+      - nvidia-cublas-cu11==11.11.3.6
+      - nvidia-cuda-cupti-cu11==11.8.87
+      - nvidia-cuda-nvrtc-cu11==11.8.89
+      - nvidia-cuda-runtime-cu11==11.8.89
+      - nvidia-cudnn-cu11==9.1.0.70
+      - nvidia-cufft-cu11==10.9.0.58
+      - nvidia-curand-cu11==10.3.0.86
+      - nvidia-cusolver-cu11==11.4.1.48
+      - nvidia-cusparse-cu11==11.7.5.86
+      - nvidia-nccl-cu11==2.21.5
+      - nvidia-nvtx-cu11==11.8.86
+      - openai==1.75.0
+      - packaging==23.2
+      - pandas==2.2.3
+      - peft==0.14.0
+      - preshed==3.0.9
+      - propcache==0.3.1
+      - psutil==7.0.0
+      - pyarrow==19.0.1
+      - pyautogen==0.7.6
+      - pydantic==2.11.3
+      - pydantic-core==2.33.1
+      - pygments==2.19.1
+      - pyparsing==3.2.3
+      - pyphen==0.17.2
+      - python-dateutil==2.9.0.post0
+      - python-dotenv==1.0.1
+      - pytz==2025.2
+      - pyyaml==6.0.2
+      - regex==2024.11.6
+      - requests==2.32.3
+      - rich==14.0.0
+      - safetensors==0.5.3
+      - scikit-learn==1.6.1
+      - scipy==1.13.1
+      - seaborn==0.13.2
+      - sentence-transformers==2.5.1
+      - shellingham==1.5.4
+      - six==1.17.0
+      - smart-open==7.1.0
+      - spacy==3.8.4
+      - spacy-legacy==3.0.12
+      - spacy-loggers==1.0.5
+      - sqlalchemy==2.0.40
+      - srsly==2.5.1
+      - sympy==1.13.1
+      - tenacity==8.5.0
+      - termcolor==3.0.1
+      - textstat==0.7.3
+      - thinc==8.3.4
+      - threadpoolctl==3.6.0
+      - tiktoken==0.9.0
+      - tokenizers==0.21.1
+      - torch==2.6.0+cu118
+      - torchaudio==2.6.0+cu118
+      - torchvision==0.21.0+cu118
+      - tqdm==4.67.1
+      - transformers==4.51.3
+      - triton==3.2.0
+      - typer==0.15.2
+      - typing-inspect==0.9.0
+      - typing-inspection==0.4.0
+      - tzdata==2025.2
+      - urllib3==2.4.0
+      - wasabi==1.1.3
+      - weasel==0.4.1
+      - wrapt==1.17.2
+      - xxhash==3.5.0
+      - yarl==1.20.0
+prefix: /home3/ssgg36/anaconda3/envs/newest_env
+
