--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: project_env
+name: new_env
 channels:
   - conda-forge
   - pytorch
@@ -130,4 +130,4 @@ dependencies:
       - wrapt==1.17.2
       - xxhash==3.5.0
       - yarl==1.20.0
-prefix: /home3/ssgg36/anaconda3/envs/project_env
+prefix: /home3/ssgg36/anaconda3/envs/new_env
